# BrailsPlusPlus

./: .coveragerc  .gitignore  CITATION.cff  LICENSE.txt  Makefile  README.md  brails.py  cleanUp.sh  conf.py  contributors.md  index.rst  manual.yml  pyproject.toml  requirements.txt  runTest.sh  setup.py  stripNotebooks.sh
.github/workflows/: build_docs.yml  lint_code.yml  runTests.yml  tests.yml
brails/: __init__.py  constants.py  exceptions.py
brails/aggregators/: __init__.py
brails/filters/: filter.py
brails/harvester/: arial_harvester.py  footprint_harvester.py  image_harvester.py
brails/imputers/: __init__.py  imputation.py
brails/inferers/: __init__.py  inferenceEngine.py  inference_engine.py
brails/processing/: street_processor.py
brails/processors/: image_processor.py
brails/scrapers/: #image_scraper.py#  #user_footprints.py#  FootprintHandler.py  __init__.py  aerial_image_harvester.py  asset_data_augmenter.py  footprint_scraper.py  image_scraper.py  region_boundary.py  street_image_harvester.py  user_footprints.py
brails/types/: __init__.py  asset_inventory.py  household_inventory.py  household_inventory_schema.json  housing_unit_inventory.py  housing_unit_inventory_schema.json  image_set.py  region_boundary.py
brails/utils/: __init__.py  arcgisapi_service_helper.py  clean_floats.py  geo_tools.py  get_class.py  importer.py  input_validator.py  inventory_validator.py  model_utils.py  plot_tools.py  rapid_utils.py  safe_get_json.py  segmentation_utils.py  spatial_join_methods.py  unit_converter.py  utils.py
docs/: Makefile  genindex.html  index.html  index_old.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  index_old.rst.txt
docs/_static/: documentation_options.js
docs/examples/: examples.html
docs/rst-code/: brails.constants.html  brails.exceptions.html  brails.filters.filter.html  brails.filters.house_view.groundingdino.config.GroundingDINO_SwinB.html  brails.filters.house_view.groundingdino.config.GroundingDINO_SwinB.rst  brails.filters.house_view.groundingdino.config.GroundingDINO_SwinT_OGC.html  brails.filters.house_view.groundingdino.config.html  brails.filters.house_view.groundingdino.config.rst  brails.filters.house_view.groundingdino.datasets.html  brails.filters.house_view.groundingdino.datasets.rst  brails.filters.house_view.groundingdino.datasets.transforms.html  brails.filters.house_view.groundingdino.html  brails.filters.house_view.groundingdino.models.GroundingDINO.backbone.backbone.html  brails.filters.house_view.groundingdino.models.GroundingDINO.backbone.html  brails.filters.house_view.groundingdino.models.GroundingDINO.backbone.position_encoding.html  brails.filters.house_view.groundingdino.models.GroundingDINO.backbone.position_encoding.rst  brails.filters.house_view.groundingdino.models.GroundingDINO.backbone.rst  brails.filters.house_view.groundingdino.models.GroundingDINO.backbone.swin_transformer.html  brails.filters.house_view.groundingdino.models.GroundingDINO.backbone.swin_transformer.rst  brails.filters.house_view.groundingdino.models.GroundingDINO.bertwarper.html  brails.filters.house_view.groundingdino.models.GroundingDINO.fuse_modules.html  brails.filters.house_view.groundingdino.models.GroundingDINO.fuse_modules.rst  brails.filters.house_view.groundingdino.models.GroundingDINO.groundingdino.html  brails.filters.house_view.groundingdino.models.GroundingDINO.html  brails.filters.house_view.groundingdino.models.GroundingDINO.ms_deform_attn.html  brails.filters.house_view.groundingdino.models.GroundingDINO.ms_deform_attn.rst  brails.filters.house_view.groundingdino.models.GroundingDINO.rst  brails.filters.house_view.groundingdino.models.GroundingDINO.transformer.html  brails.filters.house_view.groundingdino.models.GroundingDINO.transformer.rst  brails.filters.house_view.groundingdino.models.GroundingDINO.transformer_vanilla.html  brails.filters.house_view.groundingdino.models.GroundingDINO.utils.html  brails.filters.house_view.groundingdino.models.html  brails.filters.house_view.groundingdino.models.registry.html  brails.filters.house_view.groundingdino.models.rst  brails.filters.house_view.groundingdino.rst  brails.filters.house_view.groundingdino.util.box_ops.html  brails.filters.house_view.groundingdino.util.get_tokenlizer.html  brails.filters.house_view.groundingdino.util.html  brails.filters.house_view.groundingdino.util.inference.html  brails.filters.house_view.groundingdino.util.logger.html  (+549 more)
docs/rst-doc/: about.html  acknowledgements.html  api_autosummary.html  cite.html  install.html  license.html
docs/source/: api.rst  conf.py  contributing.rst  index.rst  notebooks.rst
examples/: Infer_features_for_HazusDL.ipynb  examples.rst
examples/Image_processor/: chimney_detector.ipynb
examples/bldg1/: bldg.pseudo  example1.json  example1.pseudo  example1.py  example2.json
examples/footprint/: brails_footprint.ipynb  brails_footprint.py  brails_footprint_polygon_input.ipynb  footprint.rst  output.txt
examples/housing_units/: housing_unit_example.ipynb  housing_unit_example.py
examples/image_downloads/: brails_download_images.py  brails_imagery_pipeline.ipynb  image_downloads.rst
examples/image_filters/: brails_filters.py  image_filters.rst
examples/image_processor/: NFloorsGPT.ipynb  NFloorsVLM.ipynb  VLM_segmenter.ipynb  brails_classifier.py  brails_image_classifier.py  brails_object_detector.py  building_material_VLM.ipynb  chimney_detector.ipynb  construction_type_classifier.ipynb  facade_parser.ipynb  foundation_type_classifier.ipynb  garage_detector.ipynb  nfloor_detector.ipynb  occupancy_classifier.ipynb  roof_shape_classification_GPT.ipynb  roof_shape_classification_VLM.ipynb  roof_shape_classifier.ipynb  year_built_classifier.ipynb
examples/importer/: classic.py  importer.py  importer.rst  output.txt  workflow.json
examples/imputation/: example_Tiburon.csv  imputation.py  imputation.rst  output.txt
examples/inference/: 3 Wind feature inference (Hazus HU).ipynb  (+12 more)
rst-doc/: about.rst  acknowledgements.rst  cite.rst  install.rst  license.rst
(+1072 files in other folders)
