[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brails"
# Version is read from brails/__init__.py via setup.py
dynamic = ["version", "dependencies", "readme"]

description = "BRAILS++: Building Regional Asset Inventories for Large Scale Simulation"
authors = [
  { name = "NHERI SimCenter", email = "nheri-simcenter@berkeley.edu" }
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",    
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
development = [
    "flake8",
    "pylint",
    "black",
    "pytest",
    "pytest-cov",
    "jupyter",
    "jupytext",
    "sphinx",
    "sphinx-autoapi",
    "nbsphinx",
    "flake8-rst",
    "flake8-rst-docstrings",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py37"
line-length = 85
include = [
    #"brails/types/asset_inventory.py",
    "brails/types/household_inventory.py",
    "brails/households/pyncoda/assign_households.py",
    "brails/households/pyncoda/supporting_data/FIPS_lookup_generator.py",
    "brails/scrapers/census_scraper/census_scraper.py"
]

[tool.ruff.lint]
# Enable all known categories
select = ["ALL"]
ignore = [
  "D211",
  "D212",
  "Q000",
  "Q003",
  "COM812",
  "D203",
  "ISC001",
  "E501",
  "ERA001",
  "PGH003",
  "FIX002",
  "TD003",
  "S101",
  "N801",
  "S311",
  "G004",
  "SIM102",
  "SIM108",
  "NPY002",
  "F401",
  "TRY003",
  "EM101",
  "EM102",
  "UP007",
  "UP006",
  "UP045",
  "T201",
  "N999"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args=15
max-locals=50
max-returns=11
max-branches=50
max-statements=150
max-bool-expr=5

[tool.ruff.format]
quote-style = "single"

[tool.codespell]
skip = [
    "*.html",
    "*.csv",
    "*.rst",
    "*.ipynb",
    "./htmlcov/*",
    "./docs/*",
    "./examples/*",
    "./external_tools/*",
    "./tests/*",
    "./brails/inferers/*",
    "./brails/scrapers/*",
    "./brails/imputers/*",
    "./brails/processors/*",
    "./brails/filters/*",
    "./brails/utils/*",
    "./brails/households/pyncoda/supporting_data/fips_lookup.json",
    "./brails/households/pyncoda/supporting_data/state_abbreviations.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
