[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brails"
dynamic = ["version"]
description = "BRAILS++: Building Regional Asset Inventories for Large Scale Simulation"
readme = "README.md"
authors = [
  { name = "NHERI SimCenter", email = "nheri-simcenter@berkeley.edu" }
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "addict",
    "Cython",
    "ftfy",
    "matplotlib",
    "opencv-python",
    "geopandas~=1.0",
    "pandas",
    "pillow",
    "plotly",
    "pycocotools",
    "pyarrow",
    "rasterio",
    "reverse-geocode",
    "requests",
    "scikit-learn",
    "seaborn",
    "shapely",
    "simcenter-pyncoda-fork==3.0.0.post1",
    "supervision",
    "numpy<2.0",
    "timm",
    "tensorboard",
    "tensorboardX",
    "torch<=2.5.0",
    "torchvision<=0.20.0",
    "transformers",
    "wget",
    "yacs",
    "webcolors",
    "yapf"
]

[project.optional-dependencies]
development = [
    "flake8",
    "pylint",
    "black",
    "ruff==0.12.10",
    "codespell",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "jupyter",
    "jupytext",
    "sphinx",
    "sphinx-autoapi",
    "nbsphinx",
    "flake8-rst",
    "flake8-rst-docstrings",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
brails = [
    "py.typed",
    "processors/vlm_image_classifier/clip/bpe_simple_vocab_16e6.txt.gz",
    "processors/foundation_classifier/csail_segmentation_tool/csail_seg/data/color150.mat",
    "processors/foundation_classifier/csail_segmentation_tool/csail_seg/config/*.yaml",
    "inferers/hazus_inferer_wind/input_schema.json"
]

[tool.ruff]
target-version = "py39"
line-length = 85
include = [
    #"brails/types/asset_inventory.py",

    "brails/types/housing_unit_inventory.py",
    "tests/types/test_housing_unit_inventory.py",

    "brails/aggregators/points_to_polygons/basic/basic_points_to_polygons.py",
    "tests/aggregators/points_to_polygons/basic/test_basic_points_to_polygons.py",

    "brails/aggregators/housing_units/pyncoda/pyncoda_housing_units.py",
    "brails/aggregators/housing_units/pyncoda/supporting_data/FIPS_lookup_generator.py",
    "tests/aggregators/housing_units/pyncoda/test_pyncoda_housing_units.py",

    "brails/scrapers/us_census_scrapers/census_tract_scraper.py",
    "tests/scrapers/test_census_tract_scraper.py",
]

[tool.ruff.lint]
# Enable all known categories
select = ["ALL"]
ignore = [
  "D211",
  "D212",
  "Q000",
  "Q003",
  "COM812",
  "D203",
  "ISC001",
  "E501",
  "ERA001",
  "PGH003",
  "FIX002",
  "TD003",
  "S101",
  "N801",
  "S311",
  "G004",
  "SIM102",
  "SIM108",
  "NPY002",
  "F401",
  "TRY003",
  "EM101",
  "EM102",
  "UP007",
  "UP006",
  "UP045",
  "T201",
  "N999"
]

[tool.ruff.lint.per-file-ignores]
    "tests/*" = [
        "ANN401",
        "SLF001",
        "PLR2004"
    ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args=15
max-locals=50
max-returns=11
max-branches=50
max-statements=150
max-bool-expr=5

[tool.ruff.format]
quote-style = "single"

[tool.codespell]
skip = [
    "*.html",
    "*.csv",
    "*.rst",
    "*.ipynb",
    "./htmlcov/*",
    "./docs/*",
    "./examples/*",
    "./external_tools/*",
    "./tests/utils/*",
    "./brails/inferers/*",
    "./brails/imputers/*",
    "./brails/processors/*",
    "./brails/filters/*",
    "./brails/utils/*",
    "./brails/scrapers/asce_hazard_data_scraper/*",
    "./brails/scrapers/fema_firm_scraper/*",
    "./brails/scrapers/google_satellite/*",
    "./brails/scrapers/google_streetview/*",
    "./brails/scrapers/ms_footprint_scraper/*",
    "./brails/scrapers/nbi_scraper/*",
    "./brails/scrapers/nsi_parser/*",
    "./brails/scrapers/nti_scraper/*",
    "./brails/scrapers/osm_footprint_scraper/*",
    "./brails/scrapers/osm_power_network_scraper/*",
    "./brails/scrapers/overture_maps_scraper/*",
    "./brails/scrapers/us_census_scrapers/*",
    "./brails/scrapers/usa_footprint_scraper/*",
    "./brails/scrapers/usgs_data_scrapers/*",
    "./brails/aggregators/housing_units/pyncoda/supporting_data/fips_lookup.json",
    "./brails/aggregators/housing_units/pyncoda/supporting_data/state_abbreviations.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: marks tests that make real network calls (deselect with 'not live')"
]